new employee/customer

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=bookstoredb
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=20040922
 DB_PARAMS=?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # Spring / Flyway helpers (constructed from above)
